Apply Google style guide formatting